--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.characters.CharactersFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/text_characters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
