Complete display one character

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.arklens.ui.dice.DiceFragment"
         android:label="@string/title_dice"
         tools:layout="@layout/fragment_dice" />
+
+    <fragment
+        android:id="@+id/navigation_character"
+        android:name="com.example.arklens.ui.character.CharacterFragment"
+        android:label="@string/title_character"
+        tools:layout="@layout/fragment_character" />
 </navigation>
