--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -8,18 +8,21 @@
 
     <com.google.android.material.card.MaterialCardView
         app:strokeWidth="0dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="@dimen/profile_radius">
+        app:cardCornerRadius="@dimen/profile_radius"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="?attr/colorPrimary"
+            android:background="#e6e6e6"
             android:padding="10dp">
 
             <com.google.android.material.card.MaterialCardView
@@ -33,104 +36,59 @@
                 android:backgroundTint="?attr/colorPrimary"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!--<ImageView
-                    android:id="@+id/character"
-                    android:layout_width="@dimen/image_size"
-                    android:layout_height="@dimen/image_size"
-                    android:contentDescription=""
-                    android:maxHeight="@dimen/image_size"
-                    android:src="@drawable/profile"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />-->
             </com.google.android.material.card.MaterialCardView>
-
-            <!--<ImageView
-                android:id="@+id/stars"
-                android:layout_width="@dimen/stars_image_width"
-                android:layout_height="@dimen/starts_image_height"
-                android:contentDescription="@string/stars"
-                android:paddingTop="6dp"
-                android:src="@drawable/five_stars"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/character_block" />-->
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="0dp"
-                android:text="Имя"
-                android:textAlignment="center"
+                android:text="@string/name"
+                android:textAlignment="viewStart"
                 android:textSize="@dimen/default_text_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/icon"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/race"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="15dp"
-                android:text="Расеz"
-                android:textAlignment="center"
+                android:text="@string/race_name"
+                android:textAlignment="viewStart"
                 android:textSize="@dimen/default_text_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/icon"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/name"
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/role"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="30dp"
-                android:text="Роль"
-                android:textAlignment="center"
+                android:text="@string/class_name"
+                android:textAlignment="viewStart"
                 android:textSize="@dimen/default_text_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/icon"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/race"
                 tools:ignore="MissingConstraints" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingTop="6dp"
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
+                android:maxHeight="@dimen/image_size"
+                android:paddingTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name">
-
-                <ImageView
-                    android:id="@+id/icon"
-                    android:layout_width="@dimen/image_size"
-                    android:layout_height="@dimen/image_size"
-                    android:maxHeight="@dimen/image_size"
-                    android:paddingTop="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-                <!--<ImageView
-                    android:id="@+id/element"
-                    android:layout_width="@dimen/small_image_size"
-                    android:layout_height="@dimen/small_image_size"
-                    android:contentDescription="@string/element"
-                    android:src="@drawable/element" />
-
-                <ImageView
-                    android:id="@+id/weapon_type"
-                    android:layout_width="@dimen/small_image_size"
-                    android:layout_height="@dimen/small_image_size"
-                    android:layout_marginStart="4dp"
-                    android:contentDescription="@string/weapon"
-                    android:src="@drawable/weapon" />-->
-            </LinearLayout>
+                app:layout_constraintTop_toTopOf="@+id/character_block"
+                android:src="@drawable/character_icon"
+                android:contentDescription="@string/picture" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
