--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".ui.characters.CharactersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingBottom="60dp"
         android:id="@+id/characters"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="?attr/colorOnPrimary"
         android:paddingTop="8dp"
+        android:paddingBottom="60dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:spanCount="1"
         tools:listitem="@layout/fragment_character" />
 
