--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -6,12 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.characters.CharactersFragment">
 
+    <Button
+        android:id="@+id/updateCharacter"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/update"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/characters"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="?attr/colorOnPrimary"
-        android:paddingTop="8dp"
+        android:paddingTop="55dp"
         android:paddingBottom="60dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
