--- a/app/src/main/res/layout/fragment_die.xml
+++ b/app/src/main/res/layout/fragment_die.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
 
-    <Button
-        android:id="@+id/rollButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/roll"
-        />
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/resultTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/diceRecyclerView"
 
-    <TextView
-        android:id="@+id/diceValueTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:padding="8dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:spanCount="1"
+        tools:listitem="@layout/item_dice" />
+
 
 </LinearLayout>
