--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -73,7 +73,7 @@
                 android:maxHeight="@dimen/image_size"
                 android:paddingTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/character_block"
+                app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/character_icon"
                 android:contentDescription="@string/picture" />
 
