--- a/app/src/main/res/drawable/ic_home_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_home_black_24dp.xml
@@ -4,6 +4,9 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:fillColor="#000000"
+        android:pathData="M12,2A10,10 0,0 0,22 12A10,10 0,0 0,12 2M12,4A8,8 0,0 1,20 12A8,8 0,0 1,12 20A8,8 0,0 1,4 12A8,8 0,0 1,12 4M8,9A1,1 0,0 0,7 10A1,1 0,0 0,8 11A1,1 0,0 0,9 10A1,1 0,0 0,8 9M16,9A1,1 0,0 0,15 10A1,1 0,0 0,16 11A1,1 0,0 0,17 10A1,1 0,0 0,16 9M12,14A3,3 0,0 0,9 17H15A3,3 0,0 0,12 14Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M9,14C9.3,14.8 10,15.7 11,15.7C12,15.7 12.7,14.8 13,14C12.7,13.2 12,12.3 11,12.3C10,12.3 9.3,13.2 9,14Z" />
 </vector>
