Delete whie string on top

--- a/app/src/main/res/layout/full_character.xml
+++ b/app/src/main/res/layout/full_character.xml
@@ -120,7 +120,8 @@
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/personal_block">
+                        app:layout_constraintTop_toBottomOf="@+id/personal_block"
+                        android:paddingBottom="20dp">
 
                         <TextView
                             android:id="@+id/characteristic_set"
