--- a/app/src/main/res/layout/fragment_die.xml
+++ b/app/src/main/res/layout/fragment_die.xml
@@ -12,7 +12,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:spanCount="1"
+        android:paddingTop="20dp"
+        android:paddingBottom="50dp"
         tools:listitem="@layout/item_dice" />
 
 
